[package]
name = "gma-lite"
version = "0.2.0"
edition = "2024"
authors = ["Srlion <srlion32@gmail.com>"]
license = "MIT"
description = "Lite GMA (Garry's Mod Addon) archive reader/writer"
keywords = ["gma", "gmod", "garrys-mod", "addon", "archive"]
repository = "https://github.com/Srlion/gma-lite"
readme = "README.md"
categories = ["compression", "games", "encoding", "filesystem", "parsing"]

[dependencies]
